# photon

./: CMakeLists.txt  imgui.ini
assets/shaders/debug_view/diffuse/: common.slang  frag.slang  vert.slang
assets/shaders/raytracing/: common.slang  core.slang  raygen.slang  shade.slang  trace.slang
examples/test/: CMakeLists.txt  main.cpp
include/: image.hpp
include/photon/: cpu_renderer.hpp  image.hpp  renderer.hpp  types.hpp  utils.hpp
src/: camera.hpp  cbvh.hpp  cpu_renderer.cpp  main.cpp  renderer.cpp  traversal.hpp  utils.cpp
